// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmCrawl matches snapshot while fetching film crawl data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmCrawl />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        ...loading
</p>,
      "className": "crawl-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "...loading",
      },
      "ref": null,
      "rendered": "...loading",
      "type": "p",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          ...loading
</p>,
        "className": "crawl-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "...loading",
        },
        "ref": null,
        "rendered": "...loading",
        "type": "p",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FilmCrawl matches snapshot with error fetching film crawl data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmCrawl />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        mock error
</p>,
      "className": "crawl-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "mock error",
      },
      "ref": null,
      "rendered": "mock error",
      "type": "p",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          mock error
</p>,
        "className": "crawl-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "mock error",
        },
        "ref": null,
        "rendered": "mock error",
        "type": "p",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`FilmCrawl matches snapshot with filmCrawl data fetched 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FilmCrawl />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="crawl-container"
>
        <div
                className="crawl-content"
        >
                <p>
                        There is unrest in the Galactic Senate...
                </p>
                <p>
                        Attack of the Clones
                </p>
                <p>
                        2002-05-16
                </p>
        </div>
</section>,
      "className": "crawl-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="crawl-content"
>
          <p>
                    There is unrest in the Galactic Senate...
          </p>
          <p>
                    Attack of the Clones
          </p>
          <p>
                    2002-05-16
          </p>
</div>,
        "className": "crawl-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              There is unrest in the Galactic Senate...
</p>,
            <p>
              Attack of the Clones
</p>,
            <p>
              2002-05-16
</p>,
          ],
          "className": "crawl-content",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "There is unrest in the Galactic Senate...",
            },
            "ref": null,
            "rendered": "There is unrest in the Galactic Senate...",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Attack of the Clones",
            },
            "ref": null,
            "rendered": "Attack of the Clones",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "2002-05-16",
            },
            "ref": null,
            "rendered": "2002-05-16",
            "type": "p",
          },
        ],
        "type": "div",
      },
      "type": "section",
    },
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="crawl-container"
>
          <div
                    className="crawl-content"
          >
                    <p>
                              There is unrest in the Galactic Senate...
                    </p>
                    <p>
                              Attack of the Clones
                    </p>
                    <p>
                              2002-05-16
                    </p>
          </div>
</section>,
        "className": "crawl-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="crawl-content"
>
            <p>
                        There is unrest in the Galactic Senate...
            </p>
            <p>
                        Attack of the Clones
            </p>
            <p>
                        2002-05-16
            </p>
</div>,
          "className": "crawl-container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                There is unrest in the Galactic Senate...
</p>,
              <p>
                Attack of the Clones
</p>,
              <p>
                2002-05-16
</p>,
            ],
            "className": "crawl-content",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "There is unrest in the Galactic Senate...",
              },
              "ref": null,
              "rendered": "There is unrest in the Galactic Senate...",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Attack of the Clones",
              },
              "ref": null,
              "rendered": "Attack of the Clones",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "2002-05-16",
              },
              "ref": null,
              "rendered": "2002-05-16",
              "type": "p",
            },
          ],
          "type": "div",
        },
        "type": "section",
      },
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
